--- a/package.json
+++ b/package.json
@@ -14,21 +14,22 @@
     "test": "yoshi test"
   },
   "devDependencies": {
-    "express": "^4.13.4",
-    "require-reload": "^0.2.2",
-    "velocity": "^0.7.2",
-    "yoshi": "latest",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-preset-es2015": "^6.9.0",
-    "react-addons-test-utils": "^15.3.2",
-    "react-test-renderer": "^15.5.4",
+    "chai": "^3.5.0",
+    "enzyme": "^2.3.0",
+    "express": "^4.13.4",
     "express-session": "^1.14.2",
     "jsdom-global": "^2.1.0",
-    "enzyme": "^2.3.0",
-    "chai": "^3.5.0"
+    "react-addons-test-utils": "^15.3.2",
+    "react-test-renderer": "^15.5.4",
+    "require-reload": "^0.2.2",
+    "velocity": "^0.7.2",
+    "yoshi": "latest"
   },
   "dependencies": {
+    "angular": "^1.6.4",
     "babel-polyfill": "^6.9.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
@@ -42,5 +43,11 @@
   },
   "eslintConfig": {
     "extends": "wix/react"
+  },
+  "yoshi": {
+    "entry": {
+      "react-client": "./react-client.js",
+      "angular-client": "./angular-client.js"
+    }
   }
 }
