--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "angular": "^1.6.4",
     "babel-polyfill": "^6.9.1",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-module-container": "^1.0.534"
   },
   "babel": {
     "presets": [
@@ -46,8 +47,8 @@
   },
   "yoshi": {
     "entry": {
-      "react-client": "./react-client.js",
-      "angular-client": "./angular-client.js"
+      "react-client": "./react/client.js",
+      "angular-client": "./angular/client.js"
     }
   }
 }
