--- a/.yarnrc
+++ b/.yarnrc
@@ -1,2 +1,3 @@
+"registry" "https://registry.npmjs.org/"
 "@types:registry" "https://registry.npmjs.org/"
 "@gulp-sourcemaps:registry" "https://registry.npmjs.org/"
